[package]
name = "b64converter"
version = "1.3.3"
authors = ["Anders J. Andersen <andersj.andersen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.34"
base64 = "0.22.1"
tinyfiledialogs = "3.9.1"

[profile.release]
strip = "debuginfo"
